site/src/css/custom.css
/* ... */
.menu {
  --ifm-link-decoration: none;
}

.theme-doc-sidebar-container .menu {
  padding: 0;
}

.theme-doc-sidebar-container .menu__link {
  border-radius: 0;
}

.theme-doc-sidebar-container .menu__link--active {
  font-weight: var(--uitk-navigable-fontWeight-active);
}

.theme-doc-sidebar-container li {
  display: flex;
  height: calc(var(--uitk-text-h4-fontSize) + 3 * var(--uitk-size-unit));
}

.menu__list-item:not(:first-child) {
  margin: 0;
}

.theme-doc-sidebar-container li:has(> .menu__link--active)::after {
  border-left: 4px solid var(--uitk-navigable-indicator-active);
  content: "";
  position: relative;
  left: -289px;
}

.theme-doc-sidebar-container .menu__link:hover {
  background-color: var(--uitk-color-gray-20);
}

.docs-wrapper .main-wrapper {
  background-image: url(@site/static/img/background_gradient.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: top;
}

.docs-wrapper .container .col {
  padding: 0;
}

.docs-wrapper .pagination-nav {
  --ifm-link-decoration: none;
  background-color: #10212b;
  padding: 0 calc(var(--uitk-size-unit) * 3);
  margin-top: 0;
}

.docs-wrapper .pagination-nav__link {
  padding: calc(var(--uitk-size-unit) * 3);
  text-align: left;
  border: none;
  border-radius: unset;
}

.docs-wrapper .pagination-nav__link:hover {
  --ifm-link-hover-color: none;
}

.docs-wrapper .pagination-nav__link:hover {
  background-color: var(--uitk-color-teal-900);
}

.docs-wrapper .pagination-nav .pagination-nav__sublabel {
  font-size: var(--uitk-text-h2-fontSize);
  font-weight: var(--uitk-text-h2-fontWeight-small);
  margin-bottom: var(--uitk-size-unit);
}

.docs-wrapper .pagination-nav .pagination-nav__label {
  font-size: var(--uitk-text-h3-fontSize);
  font-weight: var(--uitk-text-h3-fontWeight-small);
}

.docs-wrapper .pagination-nav .pagination-label {
  font-size: var(--uitk-text-h3-fontSize);
  font-weight: var(--uitk-text-h3-fontWeight);
}

.docs-wrapper .pagination-nav__link--next .pagination-nav__label::after,
.docs-wrapper .pagination-nav__link--prev .pagination-nav__label::before {
  content: "";
}

.docs-wrapper main .container {
  max-width: none;
  /* using !important here is not ideal but this is required to override docusauros own !important style */
  padding-bottom: 0 !important;
}

.docs-page-container {
  background-color: var(--uitk-color-white);
  color: var(--uitk-text-primary-foreground);
  font-size: var(--uitk-text-fontSize);
  display: flex;
  flex-direction: row;
}

.docs-toc-container {
  --ifm-link-color: var(--uitk-text-secondary-foreground);
  --ifm-link-decoration: none;
  height: 100%;
  position: sticky;
  padding-left: calc(4 * var(--uitk-size-unit));
  padding-top: calc(3 * var(--uitk-size-unit));
  top: var(--ifm-navbar-height);
  width: 282px;
}

.docs-toc-intro {
  font-size: var(--uitk-text-h4-fontSize);
  font-weight: var(--uitk-text-h4-fontWeight);
  position: relative;
  right: calc(0.5 * var(--uitk-size-unit));
}

.table-of-contents ul,
.table-of-contents li {
  list-style: none;
  padding-left: 0;
}

.table-of-contents li {
  padding: var(--uitk-size-unit) 0;
  height: 36px;
}

ul.table-of-contents li > ul li {
  width: 70%;
}

.table-of-contents li {
  margin: var(--ifm-toc-padding-vertical) 0;
}

.table-of-contents li li {
  margin: var(--ifm-toc-padding-vertical) var(--ifm-toc-padding-horizontal);
}

.docs-toc-container .table-of-contents ul {
  padding-inline-start: 0;
  padding-left: 0;
}

.docs-page-content {
  --ifm-list-margin: calc(var(--uitk-size-unit) * 2);
  padding: calc(var(--uitk-size-unit) * 3);
}

.docs-page-content.withToc {
  width: calc(100% - 282px);
}

.docs-page-content h2 {
  margin-top: calc(var(--uitk-size-unit) * 3);
  margin-bottom: calc(var(--uitk-size-unit) * 2);
}

.docs-page-content h3 {
  --ifm-h3-font-size: var(--uitk-text-h3-fontSize);
  --ifm-heading-font-weight: var(--uitk-text-h3-fontWeight-strong);
  --ifm-heading-line-height: var(--uitk-text-h3-lineHeight);
  --ifm-heading-color: var(--uitk-text-primary-foreground);
  margin-top: calc(var(--uitk-size-unit) * 3);
}

.docs-page-content h2 + h3 {
  margin-top: 0;
}

.docs-page-content h4 {
  --ifm-h4-font-size: var(--uitk-text-h4-fontSize);
  --ifm-heading-font-weight: var(--uitk-text-h4-fontWeight-strong);
  --ifm-heading-line-height: var(--uitk-text-h4-lineHeight);
  margin-top: calc(var(--uitk-size-unit) * 2);
  margin-bottom: var(--uitk-size-unit);
}

.docs-page-content h3 + h4 {
  margin-top: 0;
}

.docs-page-content code {
  --ifm-code-font-size: var(--uitk-text-fontSize);
  border: none;
  white-space: pre-wrap;
  overflow-wrap: anywhere;
}

.docs-page-content table + table {
  margin-top: calc(var(--uitk-size-unit) * 2);
}

.theme-doc-markdown.markdown > h1:first-child {
  --ifm-h1-font-size: var(--uitk-text-display2-fontSize);
  --ifm-heading-font-weight: var(--uitk-text-display2-fontWeight);
  --ifm-heading-line-height: var(--uitk-text-display2-lineHeight);
}

.theme-doc-markdown.markdown > h1:first-child {
  margin: calc(var(--uitk-size-unit) * 7) calc(var(--uitk-size-unit) * 3) calc(var(--uitk-size-unit) * 2) calc(var(--uitk-size-unit) * 3);
}

.theme-code-block {
  --ifm-leading: var(--ifm-paragraph-margin-bottom);
}

.footer {
  --ifm-footer-background-color: var(--uitk-color-gray-900);
  --ifm-footer-link-color: var(--uitk-text-secondary-foreground);
  --footer-items-separator-height: 16px;
  --ifm-footer-padding-vertical: calc(var(--uitk-size-unit) * 1);
}

.footer__title {
  display: none;
}

.footer .container,
.footer__items {
  display: flex;
}

.footer .container {
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  margin: 0;
  max-width: none;
}

.footer__items {
  gap: var(--uitk-size-unit);
}

.footer__items > *:not(:last-child):after {
  width: var(--uitk-size-border);
  content: "";
  background-color: var(--uitk-text-secondary-foreground);
  height: var(--footer-items-separator-height);
  align-self: center;
}
/* ... */

